5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4072/executions/1578_1560.log
== SUBMITION (2019-03-13 12:10:42) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.))
-- EXECUTION TIME:
0.170966
-- ERROR:
  File "/home/codebench/codes/1578/1560/main.py", line 2
    print(string.(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.))
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:11:12) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.).lower)
-- ERROR:
File "XXXX", line 2
    print(string.(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.).lower)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:11:41) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print((Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.).lower)
-- ERROR:
File "XXXX", line 2
    print((Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.).lower)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:12:58) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.).lower)
-- ERROR:
File "XXXX", line 2
    print(string(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.).lower)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:15:24) 
-- CODE:
string = Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.
print(string(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.).lower(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.))
-- ERROR:
File "XXXX", line 1
    string = Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:15:41) 
-- CODE:
string = Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.
print(string(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.).lower(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.))
-- EXECUTION TIME:
0.133961
-- ERROR:
  File "/home/codebench/codes/1578/1560/main.py", line 1
    string = Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 15:50:42) 
-- CODE:
string = ('Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.')
print(string.lower())
-- EXECUTION TIME:
0.16912
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
